@@ -16,3 +16,40 @@ Meanwhile, the compiled output files will be generated in the `bin` folder by de
 ## Dependency Management
 
 The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
+
+## Launch.json
+```
+"version": "0.2.0",
+    "configurations": [
+        {
+            "type": "java",
+            "name": "SwingExp",
+            "request": "launch",
+            "mainClass": "SwingExp",
+            "projectName": "JFrameProject_92741cc0"
+        },
+        {
+            "type": "java",
+            "name": "App",
+            "request": "launch",
+            "mainClass": "App",
+            "projectName": "JFrameProject_92741cc0"
+        },
+       
+        {
+            "type": "java",
+            "name": "Launch Java Program",
+            "request": "launch",
+            "mainClass": "JFXExp",
+            "projectName": "JFrameProject_92741cc0",
+            "vmArgs": "--module-path /Users/lethunguyen/Java/javafx-sdk-23/lib --add-modules javafx.controls,javafx.fxml"
+        },
+        {
+            "type": "java",
+            "name": "Current File",
+            "request": "launch",
+            "mainClass": "${file}"
+        }
+    ]
+}
+```
